--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,6 +14,8 @@ jobs:
     runs-on: ubuntu-22.04-arm
     steps:
     - uses: actions/checkout@v3
+    - name: Install dependencies
+      run: cargo install cargo-tarpaulin
     - uses: Swatinem/rust-cache@v2
     - name: Format
       run: cargo fmt -- --check
